--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ aux_links:
 footer_content: "BCIT COMM 2216 | Chloe Glave & Jacky Lau 2020"
 
 # Color scheme currently only supports "dark" or nil (default)
-color_scheme: nil
+color_scheme: dark
 
 # Google Analytics Tracking (optional)
 # e.g, UA-1234567-89
