--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: DocsCord
 description: Documentation for Discord
-baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
+baseurl: "/docscord" # the subpath of your site, e.g. /blog
 url: "http://chloe-glave.codes" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
@@ -36,7 +36,7 @@ heading_anchors: true
 # Aux links for the upper right navigation
 aux_links:
   "DocsCord on GitHub":
-    - "//github.com/Cragzu/just-the-docs"
+    - "//github.com/Cragzu/docscord"
 
 # Footer content appears at the bottom of every page's main content
 footer_content: "BCIT COMM 2216 | Chloe Glave & Jacky Lau 2020"
