--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "just-the-docs",
+  "name": "docscord",
   "version": "0.2.7",
   "description": "A modern Jekyll theme for documentation",
   "repository": "pmarsceill/just-the-docs",
